--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 --font-secondary:  "Nunito Sans", sans-serif;
 --font-primary:  "Montserrat", sans-serif;
   --color-avocado-100: oklch(0.99 0 0);
---color-primary: #cc9f00;
+--color-primary: #2d1e14;
 --color-secondary: #0d0842;
 --color-tertiary: #eaeaea;
 --color-blackBG: #f3f3f3;
